
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct map_address_racer_context {int running; int do_map; int size; int address; int thread; } ;


 int deallocate_map_address (int ,int ) ;
 int pthread_join (int ,int *) ;

__attribute__((used)) static void stop_map_address_racer(struct map_address_racer_context *context) {

 context->running = 0;
 context->do_map = 1;
 pthread_join(context->thread, ((void*)0));

 deallocate_map_address(context->address, context->size);
}
