; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/macos/local/extr_44234.c_stop_map_address_racer.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/macos/local/extr_44234.c_stop_map_address_racer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.map_address_racer_context = type { i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.map_address_racer_context*)* @stop_map_address_racer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stop_map_address_racer(%struct.map_address_racer_context* %0) #0 {
  %2 = alloca %struct.map_address_racer_context*, align 8
  store %struct.map_address_racer_context* %0, %struct.map_address_racer_context** %2, align 8
  %3 = load %struct.map_address_racer_context*, %struct.map_address_racer_context** %2, align 8
  %4 = getelementptr inbounds %struct.map_address_racer_context, %struct.map_address_racer_context* %3, i32 0, i32 0
  store i32 0, i32* %4, align 4
  %5 = load %struct.map_address_racer_context*, %struct.map_address_racer_context** %2, align 8
  %6 = getelementptr inbounds %struct.map_address_racer_context, %struct.map_address_racer_context* %5, i32 0, i32 1
  store i32 1, i32* %6, align 4
  %7 = load %struct.map_address_racer_context*, %struct.map_address_racer_context** %2, align 8
  %8 = getelementptr inbounds %struct.map_address_racer_context, %struct.map_address_racer_context* %7, i32 0, i32 4
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @pthread_join(i32 %9, i32* null)
  %11 = load %struct.map_address_racer_context*, %struct.map_address_racer_context** %2, align 8
  %12 = getelementptr inbounds %struct.map_address_racer_context, %struct.map_address_racer_context* %11, i32 0, i32 3
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.map_address_racer_context*, %struct.map_address_racer_context** %2, align 8
  %15 = getelementptr inbounds %struct.map_address_racer_context, %struct.map_address_racer_context* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @deallocate_map_address(i32 %13, i32 %16)
  ret void
}

declare dso_local i32 @pthread_join(i32, i32*) #1

declare dso_local i32 @deallocate_map_address(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
